# ChestnutGameEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ChestnutGameEngine.code-workspace  README.md  makefile
src/chestnut/engine/: CMakeLists.txt  constants.hpp  init.cpp  init.hpp  macros.hpp  types.hpp
src/chestnut/engine/audio/: CMakeLists.txt  audio_manager.cpp  audio_manager.hpp
src/chestnut/engine/debug/: CMakeLists.txt  component_rtti.cpp  component_rtti.hpp  component_rtti.inl  debug.hpp  log.cpp  log.hpp
src/chestnut/engine/ecs_impl/: CMakeLists.txt  event.hpp  event_listener.cpp  event_listener.hpp  event_listener.inl  event_listener_guard.cpp  event_listener_guard.hpp  event_manager.cpp  event_manager.hpp  event_manager.inl  event_manager.tpp  logic_system.hpp  rendering_system.cpp  rendering_system.hpp  system.cpp  system.hpp
src/chestnut/engine/graphics/: CMakeLists.txt  animation2d.cpp  animation2d.hpp  camera2d.cpp  camera2d.hpp  camera3d.cpp  camera3d.hpp  colored_polygon2d.cpp  colored_polygon2d.hpp  colored_polygon2d_renderer.cpp  colored_polygon2d_renderer.hpp  dynamic_texture2d.cpp  dynamic_texture2d.hpp  extrude_profile.cpp  extrude_profile.hpp  framebuffer.cpp  framebuffer.hpp  light.cpp  light.hpp  map_sprite_sheet.hpp  map_sprite_sheet.tpp  material.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  sprite.cpp  sprite.hpp  sprite_renderer.cpp  sprite_renderer.hpp  text.cpp  text.hpp  text_renderer.cpp  text_renderer.hpp  texture2d.cpp  texture2d.hpp
src/chestnut/engine/main/: CMakeLists.txt  engine.cpp  engine.hpp  engine.inl  engine.tpp  window.cpp  window.hpp
src/chestnut/engine/maths/: CMakeLists.txt  angles.cpp  angles.hpp  curves.cpp  curves.hpp  matrix.hpp  matrix.inl  matrix.tpp  matrix3.cpp  matrix3.hpp  matrix3.tpp  matrix4.cpp  matrix4.hpp  matrix4.inl  matrix4.tpp  rectangle.hpp  vector.hpp  vector.inl  vector.tpp  vector2.cpp  vector2.hpp  vector2.inl  vector2.tpp  vector3.cpp  vector3.hpp  vector3.inl  vector3.tpp  vector4.cpp  vector4.hpp  vector4.tpp  vector_cast.hpp  vector_cast.tpp  vector_transform.hpp  vector_transform.inl  vector_transform.tpp
src/chestnut/engine/memory/: CMakeLists.txt  multi_type_dynamic_memory_pool.cpp  multi_type_dynamic_memory_pool.hpp  multi_type_dynamic_memory_pool.inl  multi_type_dynamic_memory_pool.tpp
src/chestnut/engine/misc/: CMakeLists.txt  auto_timer.cpp  auto_timer.hpp  exception.hpp  flags.hpp  glu_error_string.cpp  glu_error_string.hpp  locked_auto_timer.cpp  locked_auto_timer.hpp  locked_manual_timer.cpp  locked_manual_timer.hpp  manual_timer.cpp  manual_timer.hpp  message_boxes.cpp  message_boxes.hpp  rtti_type_name.cpp  rtti_type_name.hpp  timer.cpp  timer.hpp  utility_functions.cpp  utility_functions.hpp
src/chestnut/engine/physics/: CMakeLists.txt  collider.cpp  collider.hpp  collider2d.cpp  collider2d.hpp  collider2d_collision_detection.cpp  collider2d_collision_detection.hpp  collider_attributes.cpp  collider_attributes.hpp  collision_resolution.cpp  collision_resolution.hpp
src/chestnut/engine/resources/: CMakeLists.txt  (+31 more)
src/chestnut/engine_editor/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  audio_manager_test.cpp  camera3d_test.cpp  colored_polygon2d_renderer_test.cpp  engine_test.cpp  event_listener_test.cpp  event_manager_test.cpp  extrude_profile_test.cpp  framebuffer_test.cpp  math_matrix_3_test.cpp  math_matrix_4_test.cpp  math_matrix_n_test.cpp  math_vector_2_test.cpp  math_vector_3_test.cpp  math_vector_4_test.cpp  math_vector_cast_test.cpp  math_vector_n_test.cpp  math_vector_transform_test.cpp  phong_renderer_test.cpp  physics_collision2d_test.cpp  physics_collision_test.cpp  resource_manager_test.cpp  resources_tests.cpp  simple2d_animation_system_test.cpp  simple2d_rendering_system_test.cpp  sprite_renderer_test.cpp  system_test_utils.cpp  system_test_utils.hpp  test_utils.hpp  text_renderer_test.cpp  timer_test.cpp  window_test.cpp
tests/common/: test_utils.hpp
tests/engine/: CMakeLists.txt  audio_manager_test.cpp  do_not_commit_this.cpp  engine_efficiency_test.cpp  event_listener_test.cpp  event_manager_test.cpp  flags_test.cpp  framebuffer_test.cpp  math_matrix_4_test.cpp  math_matrix_n_test.cpp  math_vector_3_test.cpp  math_vector_cast_test.cpp  math_vector_transform_test.cpp  resources_tests.cpp  serialization_tests.cpp  simple2d_animation_system_test.cpp  simple2d_rendering_system_test.cpp  sprite_renderer_test.cpp  text_renderer_test.cpp  window_test.cpp
tests/engine/ecs/: CMakeLists.txt  component_batch_test.cpp  component_batch_test.hpp  component_bundle_signature_test.hpp  component_bundle_test.hpp  component_set_signature_test.cpp  component_set_signature_test.hpp  component_set_test.cpp  component_set_test.hpp  component_storage_segment_test.cpp  component_storage_test.cpp  component_vector_wrapper_test.cpp  component_vector_wrapper_test.hpp  ecs_tests.hpp  entity_manager_test.cpp  entity_manager_test.hpp  entity_registry_test.cpp  entity_registry_test.hpp  entity_signature_test.cpp
tests/engine/graphics/: CMakeLists.txt  colored_polygon2d_renderer_test.cpp  colored_polygon2d_renderer_test.hpp  graphics_tests.hpp  sprite_renderer_test.cpp  sprite_renderer_test.hpp  text_renderer_test.cpp  text_renderer_test.hpp
tests/engine/maths/: CMakeLists.txt  maths_tests.hpp  matrix3_test.cpp  matrix3_test.hpp  matrix4_test.cpp  matrix4_test.hpp  vector2_test.cpp  vector2_test.hpp  vector3_test.cpp  vector3_test.hpp  vector_cast_test.cpp  vector_cast_test.hpp  vector_transform_test.cpp  vector_transform_test.hpp  vectorn_test.cpp  vectorn_test.hpp
tests/engine/memory/: CMakeLists.txt  memory_tests.hpp  multi_type_dynamic_memory_pool_test.cpp  multi_type_dynamic_memory_pool_test.hpp
tests/engine/misc/: CMakeLists.txt  misc_tests.hpp  timer_test.hpp
tests/engine_extensions/graphics3d/: CMakeLists.txt  camera3d_test.cpp  extrude_profile_test.cpp  phong_renderer_test.cpp
tests/performance/: CMakeLists.txt  performance_tests.hpp  quantity_performance_test.cpp  quantity_performance_test.hpp
(+486 files in other folders)
